Modifing the css

--- a/css-folder/index1.html
+++ b/css-folder/index1.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 style="color:rgb(47, 189, 255);font-size: 41px; background-color: rgb(184, 86, 184); display: inline; font-weight: lighter;">Welcome to CSS Folder</h1>
-</body>
+<!-- <h1 style="color:rgb(47, 189, 255);font-size: 41px; background-color: rgb(184, 86, 184); display: inline; font-weight: lighter;">Welcome to CSS Folder</h1> -->
+
+<h1 class="heading_style">Welcome to CSS Folder</h1>
+<h1 class="rectangle"></h1>
+    </body>
 </html>
